# ep-meta-analyse

./: .gitattributes  LICENSE.md  Makefile  README.md  Utviklingsstatistikk.ipynb  changes.py  commit-stats.py  pyproject.toml  size-stats.py
analysis/: .gitignore  Makefile  README.md  Utviklingsstatistikk.docx  Utviklingsstatistikk.ipynb  commit-analysis.xlsx  pyproject.toml  size-analysis.xlsx  size-stats.py
analysis/lib/: size_data.py
lib/: commit_data.py  repos.py  size_data.py
