[tool.poetry]
name = "eessi-pensjon"
version = "0.1.0"
description = "Python tools for analysis"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.11.*"
notebook = "^6.5.1"
traitlets = "5.9.0"
pandas = "^2.1.3"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
nbconvert = {extras = ["webpdf"], version = "^7.7.4"}
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pyppeteer = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
